--- a/Teams/Main.css/style.css
+++ b/Teams/Main.css/style.css
@@ -10,7 +10,11 @@ body{
   height: 100vh;;
   width: 100%;
   display: flex;
-  background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%);
+  /* background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%); */
+  /* background-image: url(../assests/1595926.jpg); */
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 ::selection{
   color: #f2f2f2;
@@ -26,23 +30,33 @@ body::after{
   width: 100%;
 }
 body::before{
-  clip-path: circle(30% at left 20%);
-  opacity: 0.4;
-  background-image: linear-gradient( 135deg, #F6416C 10%, #ff9a9e 100%);
+  /* clip-path: circle(30% at left 20%); */
+  /* opacity: 0.4; */
+  /* background-image: linear-gradient( 135deg, #F6416C 10%, #f327f3 100%); */
+  background: linear-gradient(rgb(94, 71, 71),#f0f);
+  clip-path: circle(30% at right 70%);
 }
 body::after{
-  opacity: 0.4;
-  clip-path: circle(25% at right 80%);
-  background-image: linear-gradient( 135deg, #F6416C 10%, #ff9a9e 100%);
+  /* opacity: 0.4;
+  content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; */
+  /* clip-path: circle(25% at right 80%); */
+  /* background-image: linear-gradient( 135deg, #F6416C 10%, #ff9a9e 100%); */
+  background: linear-gradient(#2196f3,#e91e63);
+  clip-path: circle(30% at 10% 10% );
 }
 header{
   height: 85vh;
   width: 90%;
   background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.50);
+  border-top: 1px solid rgba(255, 255, 255, 5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(8px);
   z-index: 12;
   border-radius: 25px;
   margin: auto;
@@ -59,10 +73,10 @@ header .navbar{
 }
 .decs h1{
     /* display: inline-block; */
-    color: rgb(100, 10, 10);
+    color: rgba(255, 255, 255, 0.6);
     align-items: right;
     padding: 15px;
-    font-size: 27px;
+    font-size: 30px;
 }
 /* .navbar .desc{
     
@@ -75,7 +89,7 @@ header .navbar{
 .navbar .logo a{
   text-decoration: none;
   font-size: 22px;
-  color:rgb(100, 10, 10);
+  color:rgba(255, 255, 255, 0.6);
   font-weight: 500;
 }
 .navbar .menu li{
@@ -83,7 +97,7 @@ header .navbar{
   margin: 0 6px;
 }
 .navbar .menu a{
-  color:white;
+  color:rgba(255, 255, 255, 0.6);
   text-decoration: none;
   font-size: 17px;
   font-weight: 500;
@@ -94,8 +108,8 @@ header .navbar{
 } */
 .navbar .buttons input{
   outline: none;
-  color: rgb(100, 10, 10);
-  font-size: 18px;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 19px;
   font-weight: 500;
   border-radius: 12px;
   padding: 6px 15px;
@@ -103,7 +117,8 @@ header .navbar{
   margin: 0 8px;
   cursor: pointer;
   transition: all 0.3s ease;
-  background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%);
+  /* background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%); */
+  background: linear-gradient(to left,#2196f3,#f0f);
 }
 .navbar .buttons input:hover{
   transform: scale(0.97);
@@ -117,7 +132,7 @@ header .navbar{
 .text-content h1{
   font-size: 34px;
   font-weight: 600;
-  color: rgb(100, 10, 10);
+  color: rgba(255, 255, 255, 0.6);
   text-align: center;
   /* width: 100%; */
   /* text-shadow: 3px 3px 5px red; */
@@ -125,14 +140,14 @@ header .navbar{
 .text-content h4{
   font-size: 20px;
   margin-top: 10px;
-  color: rgb(100, 10, 10);
+  color: rgba(255, 255, 255, 0.6);
   text-align: center;
   /* text-shadow: 3px 3px 5px red; */
 }
 .text-content h3{
     font-size: 27px;
     font-weight: 600;
-    color: rgb(100, 10, 10);
+    color: rgba(255, 255, 255, 0.6);
     text-align: center;
     width: 100%;
     /* text-shadow: 3px 3px 5px red; */
@@ -140,14 +155,14 @@ header .navbar{
   .form{
     font-size: 20px;
     font-weight: 600;
-    color:rgb(100, 10, 10);
+    color:rgba(255, 255, 255, 0.6);
     text-align: center;
     width: 100%;
     /* text-shadow: 3px 3px 5px red; */
   }
   .form input{
     outline: none;
-    color: rgb(100, 10, 10);
+    color: rgba(255, 255, 255, 0.6);
     font-size: 18px;
     font-weight: 500;
     border-radius: 12px;
@@ -156,7 +171,8 @@ header .navbar{
     margin: 0 8px;
     cursor: pointer;
     transition: all 0.3s ease;
-    background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%);
+    /* background-image: linear-gradient( 135deg, #ff9a9e  10%, #F6416C 100%); */
+    background: linear-gradient(to left,#2196f3,#f0f);
   }
 @media (max-width:850px) {
   header .navbar{
